--- a/notebooks/MinMaxAirflow.ipynb
+++ b/notebooks/MinMaxAirflow.ipynb
@@ -8,10 +8,8 @@
    "outputs": [],
    "source": [
     "import copy\n",
-    "import math\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from pathlib import Path\n",
     "\n",
     "from experiments_2022 import DATASETS_PATH\n",
     "from experiments_2022.zone_level_analysis import cleaning, base\n",
@@ -150,13 +148,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# results.to_csv(DATASETS_PATH / \"csvs\" / \"min_airflow_2023.csv\")"
+    "results.to_csv(DATASETS_PATH / \"csvs\" / \"min_airflow_2023.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "299d9251-4bf8-4323-b8b6-342162e07945",
+   "id": "1d97b60e-9c0a-4655-a209-bcbdf5276506",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -164,9 +162,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "experiments_2022",
    "language": "python",
-   "name": "python3"
+   "name": "experiments_2022"
   },
   "language_info": {
    "codemirror_mode": {
